Possible fix for bug #19529 (thanks Rasmus, Arjen and Monty)

Major changes to _restore_connection_defaults
 - added code block to finds and releases the active mysql result (if any)
 - this should prevent the 'Commands out of sync' error that would be
   raised when a query is made when unfreed results exist

Minor changes to _restore_connection_defaults
 - replaced calls to mysql_real_query with mysql_query
   - we probably should not be using mysql_real_query without checking to
     see if we have a version that supports the function.
   - given that we control the query strings here and do not need to
     worry about binary safety, I am using mysql_query instead
   - see the bug report for further discussion


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@98966 c90b9560-bf6c-de11-be94-00142212c4b1